# JarvisAssistFrontEnd

./: .env  index.html  package-lock.json  package.json  vite.config.js  webpack.config.js
.github/workflows/: ai-commit.yml  ci.yml  cross-compile.yml  release.yml
src/: App.css  App.jsx  ExtendedCircularAudioWave.jsx  WebGLCanvas.jsx  exportvarstuff.txt  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  main.rs
src/libs/: circular-audio-wave.js
src/shaders/: bufferA.glsl  common.glsl  image.glsl  shaderContainer.js
temp/: index.html
temp/assets/: browser-CnHg7PHq.js  index-B_qv9Caz.js  index-BwQlfCI3.js  index-CRa4Sm_y.js  index-DKEK8Uiv.js  index-DU6Cz0No.js  index-DXxfdlJ_.js  index-DqVvZiTh.css  index-DszxJi7q.js  index-v9pMB6AK.js
